# fsrs_plugin

./: .agentignore  .gitignore  .gitlab-ci.yml  .markdownlintignore  .repogrokignore  .stylelintrc.json  AGENTS.md  AGENT_GUIDELINES.md  FSRS_PLAN.md  FSRS_USAGE.md  LICENSE  NOTES.md  PERFORMANCE_OPTIMIZATION.md  README.md  README.ru.md  README.zh.md  TS_TO_RUST_MIGRATION_PLAN.md  YAML_MIGRATION_PLAN.md  YAML_NEW_FORMAT.md  esbuild.config.mjs  eslint.config.mts  lefthook.yml  manifest.json  package-lock.json  package.json  styles.css  test-replace.js  tsconfig.json  versions.json  vitest.config.ts
docs/: ABC of FSRS.md  FSRS_USAGE.md  GLOSSARY.md  GLOSSARY.zh.md  NOTES.md  PERFORMANCE_OPTIMIZATION.md  WASM-INTEGRATION.md  add_where_functionality_plan.md  add_where_functionality_plan_2.md  agent_incidents.md  agent_notes.md  cache.ru.md  code_cruft_analysis.md  intended_use.en.md  intended_use.md  intended_use.ru.md  intended_use.zh.md  migrate TS to Rust.md  name-origin.md  name-origin.ru.md  name-origin.zh.md  parsing-usage.md  (+10 more)
wasm-lib/: .repogrokignore  Cargo.toml  LICENSE
wasm-lib/src/: cache.rs  card_history.rs  conversion.rs  current_state.rs  fsrs_logic.rs  fsrs_schedule.rs  json_parsing.rs  lib.rs  macros.rs  next_review.rs  review_functions.rs  sort_functions.rs  state_functions.rs  types.rs  wasm_api.rs  yaml_parsing.rs
wasm-lib/src/table_processing/: mod.rs  types.rs
wasm-lib/src/table_processing/filtering/: calculator.rs  evaluator.rs  mod.rs  sorter.rs
wasm-lib/src/table_processing/parsing/: expression.rs  lexer.rs  mod.rs  parser.rs  validator.rs
(+205 files in other folders)
