[package]
name = "wasm-lib"
version = "0.1.0"
edition = "2024"
description = "Библиотека FSRS для плагина Obsidian — расчёты, парсинг, фильтрация и сортировка карточек"
repository = "https://gitlab.com/Evgene-Kopylov/FSRS-plugin"
license = "LGPL-3.0"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
wasm-bindgen = "0.2"
rs-fsrs = { version = "1.2.1", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
serde_json = "1.0"
serde_yaml = "0.9"
log = "0.4"
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"
regex-lite = "0.1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
